<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.changfeng.taptapword.SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="20dp"
            android:longClickable="false"
            android:text="@string/title_reset_preferences" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#673AB7" />

        <com.rey.material.widget.TextView
            android:id="@+id/reset_all_data"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/reset_all_data"
            android:textSize="20sp" />

        <com.rey.material.widget.TextView
            android:id="@+id/reset_all_preferences"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/reset_all_preference"
            android:textSize="20sp" />

        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="20dp"
            android:longClickable="false"
            android:text="@string/title_backup_and_restore" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#673AB7" />

        <com.rey.material.widget.TextView
            android:id="@+id/backup_data"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/backup"
            android:textSize="20sp" />

        <com.rey.material.widget.TextView
            android:id="@+id/restore_data"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/restore"
            android:textSize="20sp" />

        <com.rey.material.widget.TextView
            android:id="@+id/clear_backup_data"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/clear_backup_data"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
