<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/word_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:lines="1"
        android:textColor="#03a9f4"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <com.rey.material.widget.TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center"
            android:text="@string/text_view_archive"
            android:textSize="25sp"
            android:padding="10dp"/>

        <com.rey.material.widget.CheckBox
            android:id="@+id/archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp"/>

    </LinearLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/means"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_word"/>


    </LinearLayout>


</LinearLayout>

